variables.RunHalf.scala.error
Compilation error:
RunHalf:2: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Byte)Int
match expected type ?
while (2*baggles = orangeCells +1) {
        ^RunHalf:2: error: not found: value baggles
while (2*baggles = orangeCells +1) {
         ^