variables.RunHalf.scala.code
var orangeCells: Int = 0
while (2*baggles = orangeCells +1) {
  forward();
  if (isOverOrange() == true) {
    orangeCells = orangeCells + 1;
  }
}